<resources>
    <string name="app_name">튜립</string>
    <string name="all_total_place_count">%d개 장소</string>
    <string name="all_trip_duration">%1$d박 %2$d일</string>
    <string name="all_trip_day_trip_duration">당일치기</string>
    <string name="all_loading">로딩 중…</string>
    <string name="all_video_description">%s · %s</string>
    <string name="all_close_description">닫기</string>
    <string name="all_snackbar_redirect_login">로그인 하기</string>
    <string name="all_confirm">확인</string>
    <string name="all_turip_name_error_duplicate">중복된 튜립명이 존재합니다.</string>
    <string name="all_turip_name_same_default_name_error">\'기본 튜립\' 대신 다른 이름을 입력해 주세요</string>
    <string name="all_turip_name_error_out_of_bound">튜립명은 1 ~ 20 글자 범위 입니다.</string>
    <string name="all_turip_name_warning_max_length">튜립명은 최대 20글자 입니다.(현재 20 글자)</string>
    <string name="all_turip_description">직진만 남은 여행</string>
    <string name="all_back_description">뒤로 가기</string>
    <string name="all_text_expand">더보기</string>
    <string name="all_text_collapse">접기</string>
    <string name="all_snackbar_not_found_map_url">지도 앱으로 이동에 문제가 발생 했어요</string>
    <string name="all_snackbar_not_found_privacy_policy_url">개인 정보 처리 방침 이동에 문제가 발생 했어요</string>
    <string name="all_snackbar_not_found_share">튜립을 공유하는 과정에 문제가 발생 했어요</string>
    <string name="all_snackbar_not_found_trip_add">튜립 생성 화면으로 이동하는 과정에 문제가 발생 했어요</string>
    <string name="all_snackbar_not_found_video_url">영상 앱으로 이동에 문제가 발생 했어요</string>
    <string name="all_snackbar_not_found_inquiry_url">문의하기 이동에 문제가 발생 했어요</string>
    <string name="all_share_description">공유 하기</string>
    <string name="all_mascot_description">마스코트</string>
    <string name="all_turip_share_by_text">텍스트로 공유하기</string>
    <string name="all_turip_invite_by_link">링크로 초대하기</string>
    <string name="bottom_navigation_home">홈</string>
    <string name="bottom_navigation_my_turip">내 튜립</string>
    <string name="bottom_navigation_my_page">마이페이지</string>
    <string name="search_result_no_result">\'%s\'의\n검색 결과가 없어요...</string>
    <string name="search_result_video_description">%1$s · %2$s</string>
    <string name="search_result_exist_result">검색결과 %d개</string>
    <string name="search_result_hint_text">예시 검색: 1박 2일, 감성, 도쿄, 해수욕장</string>
    <string name="search_result_tip">TIP</string>
    <string name="search_result_tip_region">지역명으로 검색해보세요.</string>
    <string name="region_result_no_result">검색 결과가 없어요...</string>
    <string name="region_result_video_description">%1$s · %2$s</string>
    <string name="region_result_exist_result">검색결과 %d개</string>
    <string name="home_top_title">😊 오늘의 기분은, 여행하기 딱 좋아요!</string>
    <string name="home_users_like_content_title">❤️ 한 주간 가장 많이 북마크 된 콘텐츠</string>
    <string name="my_page_profile_image_description">프로필 이미지</string>
    <string name="my_page_bookmark_content_title">저장한 콘텐츠</string>
    <string name="my_page_view_all_content">모두 보기</string>
    <string name="my_page_settings_title">고객 지원 및 설정</string>
    <string name="my_page_inquiry">문의하기</string>
    <string name="my_page_privacy_policy">개인 정보 처리 방침</string>
    <string name="my_page_login">로그인</string>
    <string name="my_page_logout">로그아웃</string>
    <string name="my_page_withdraw">회원탈퇴</string>
    <string name="my_page_logout_dialog_message">정말 로그아웃 하시겠습니까?</string>
    <string name="my_page_logout_dialog_confirm">로그아웃</string>
    <string name="my_page_logout_dialog_dismiss">취소</string>
    <string name="my_page_withdraw_dialog_message">정말 회원탈퇴 하시겠습니까?</string>
    <string name="my_page_withdraw_dialog_confirm">회원탈퇴</string>
    <string name="my_page_withdraw_dialog_dismiss">취소</string>
    <string name="my_page_empty_bookmark_content">저장한 콘텐츠가 없어요\n홈에서 마음에 드는 콘텐츠를 저장해보세요</string>
    <string name="my_page_error">데이터를 불러오지 못했습니다</string>
    <string name="my_page_snackbar_bookmark_remove_failed">북마크 해제 실패했어요.</string>
    <string name="my_page_snackbar_bookmark_remove_failed_action">새로고침</string>
    <string name="my_page_title">마이페이지</string>
    <string name="my_page_snackbar_profile_load_failed">프로필을 불러오지 못했어요.</string>
    <string name="my_page_snackbar_bookmarks_load_failed">저장한 콘텐츠들을 불러오지 못했어요.</string>
    <string name="bookmark_content_title">저장한 콘텐츠</string>
    <string name="bookmark_content_count">콘텐츠 %d개</string>
    <string name="bookmark_content_empty_suggest_title">컨텐츠를 저장 해보세요!</string>
    <string name="bookmark_content_empty_suggest_description">원하는 동선이 담긴\n여행 일정을 저장해 보세요.</string>
    <string name="bookmark_content_load_more_fail_title">데이터를 불러올 수 없습니다. 잠시 후 재시도 해주세요</string>
    <string name="bookmark_content_count_fail">콘텐츠 -</string>
    <string name="bookmark_content_snackbar_bookmark_remove_failed">북마크 해제 실패했어요.</string>
    <string name="turip_place_empty_suggest_title">튜립에 장소를 추가 해보세요!</string>
    <string name="turip_place_empty_suggest_description">장소에 \'내 튜립\' 버튼을 눌러\n마음에 드는 튜립을 만들어 보세요.</string>
    <string name="turip_place_suggest_login_for_share">로그인 후 이용 가능합니다.</string>
    <string name="trip_detail_video_error">해당 영상은 제작자의 요청으로 유튜브로만 시청할 수 있습니다.\n클릭 시 유튜브로 이동합니다.</string>
    <string name="trip_detail_day_place_count">일정 %d개</string>
    <string name="trip_detail_trip_day">%d일차</string>
    <string name="trip_detail_trip_all_place">전체</string>
    <string name="trip_detail_snackbar_bookmark_save">북마크에 저장했어요</string>
    <string name="trip_detail_snackbar_bookmark_remove">북마크를 해제했어요</string>
    <string name="trip_detail_info">%s • %d개 장소 • %s</string>
    <string name="trip_detail_saved_places_label">저장된 장소</string>
    <string name="trip_detail_participant_count_label">참여인원</string>
    <string name="bottom_sheet_turip_title">튜립 목록</string>
    <string name="bottom_sheet_turip_place_save_in_turip">%s에 저장했어요</string>
    <string name="bottom_sheet_turip_place_remove_in_turip">%s에서 삭제했어요</string>
    <string name="trip_place_map">지도 보기</string>
    <string name="trip_turip_place">내 튜립</string>
    <string name="trip_place_time_line">%s~</string>
    <string name="trip_detail_period">여행 기간</string>
    <string name="trip_detail_visit_place">방문 장소</string>
    <string name="trip_detail_turip_selection_updated">%s에 대한 변경 사항이 반영됐어요</string>
    <string name="trip_detail_trip_bookmark_normal">이 여행 저장하기</string>
    <string name="trip_detail_trip_bookmark_select">저장된 여행이에요</string>
    <string name="trip_detail_bookmark_description">컨텐츠 북마크</string>
    <string name="trip_detail_bottom_sheet_turip_selection_title">튜립 선택</string>
    <string name="trip_detail_bottom_sheet_add_turip_description">튜립 추가</string>
    <string name="trip_detail_bottom_sheet_turip_selection_confirm">완료</string>
    <string name="trip_detail_bottom_sheet_snackbar_place_removed">%s을(를) 튜립에서 제거했어요</string>
    <string name="trip_detail_bottom_sheet_snackbar_place_remove_undo">취소</string>
    <string name="trip_detail_bottom_sheet_snackbar_place_remove_failed">일시적인 오류로 [%s]을(를) 제거하지 못했어요</string>
    <string name="trip_detail_bottom_sheet_snackbar_place_reorder_retry">다시 시도</string>
    <string name="trip_detail_bottom_sheet_snackbar_place_reorder_failed">일시적인 오류로 장소 순서를 변경하지 못했어요</string>
    <string name="trip_detail_bottom_sheet_turip_place_select_description">튜립에 저장</string>
    <string name="trip_detail_bottom_sheet_turip_place_unselect_description">튜립에서 저장 해제</string>
    <string name="turip_title">튜립 편집</string>
    <string name="bottom_sheet_turip_add_title">튜립 추가</string>
    <string name="bottom_sheet_turip_delete">튜립 삭제</string>
    <string name="bottom_sheet_turip_leave">튜립 나가기</string>
    <string name="bottom_sheet_turip_add_turip_name_hint">생성할 튜립명을 입력해주세요.</string>
    <string name="bottom_sheet_turip_modify_title">튜립 수정</string>
    <string name="bottom_sheet_turip_modify_turip_name_hint">변경할 튜립명을 입력해주세요.</string>
    <string name="bottom_sheet_turip_remove_title">%s을 삭제하시겠습니까?</string>
    <string name="bottom_sheet_turip_leave_title">%s에서 나가시겠습니까?</string>
    <string name="bottom_sheet_turip_add_turip">%s 튜립을 추가하였습니다.</string>
    <string name="bottom_sheet_turip_delete_turip">%s 튜립을 제거하였습니다.</string>
    <string name="bottom_sheet_turip_remove_cancel">취소</string>
    <string name="bottom_sheet_turip_remove_approve">삭제</string>
    <string name="bottom_sheet_turip_leave_approve">나가기</string>
    <string name="turip_empty_suggest_title">나만의 튜립을 만들어보세요!</string>
    <string name="turip_empty_suggest_description">튜립을 만들면 다양한 장소들을\n내 마음대로 나누어 보관할 수 있어요.</string>
    <string name="main_double_back_pressed_to_exit">한 번 더 누르면 종료됩니다.</string>
    <string name="cannot_connect_network">네트워크에 연결할 수 없습니다.</string>
    <string name="check_connection_status">연결 상태를 확인해주세요</string>
    <string name="retry">다시시도</string>
    <string name="server_error">서버에 오류가 발생했습니다.</string>
    <string name="retry_later">나중에 다시 시도해주세요</string>
    <string name="unexpected_error">예상치 못한 문제가 발생했어요</string>
    <string name="region_type_buttons_domestic">국내</string>
    <string name="region_type_buttons_abroad">해외</string>
    <string name="login_start_to_guest">게스트 모드로 시작하기</string>
    <string name="login_help_description">게스트 모드를 이용할 경우,\n사용할 수 있는 기능이 제한돼요</string>
    <string name="login_google_description">구글 로그인</string>
    <string name="login_dialog_migration_message">기존의 데이터와 동기화 하시겠습니까?</string>
    <string name="login_dialog_migration_title">동기화</string>
    <string name="login_dialog_confirm_text">데이터 동기화</string>
    <string name="turip_dialog_login_suggest_title">로그인이 필요합니다.</string>
    <string name="turip_dialog_login_suggest_description">로그인하고 나만의 여행 정보를\n 공유해보세요!</string>
    <string name="turip_dialog_login_suggest_confirm">로그인</string>
    <string name="turip_dialog_login_suggest_dismiss">나중에</string>
    <string name="turip_more_option_bottom_sheet_add_turip">튜립 추가</string>
    <string name="turip_more_option_bottom_sheet_change_name">이름 변경</string>
    <string name="turip_more_option_bottom_sheet_delete">삭제</string>
    <string name="turip_more_option_bottom_sheet_leave">나가기</string>
    <string name="turip_added_snackbar_message">\'%s\' 튜립이 추가됐어요</string>
    <string name="turip_card_together_turip">함께 튜립</string>
    <string name="turip_card_solo_turip">나홀로 튜립</string>
    <string name="turip_tab_together_turip">함께 튜립</string>
    <string name="turip_tab_solo_turip">나홀로 튜립</string>
    <string name="turip_tab_all">전체</string>
    <string name="turip_detail_sse_reconnecting">네트워크 오류로 재연결 중입니다...</string>
    <string name="turip_detail_sse_reconnected">재연결 되었습니다.</string>
    <string name="my_turip_screen_title">내 튜립</string>
    <string name="turip_add_turip">%s 튜립을 추가하였습니다.</string>
    <string name="turip_delete_turip">%s 튜립을 제거하였습니다.</string>
    <string name="turip_remove_cancel">취소</string>
    <string name="turip_remove_approve">삭제</string>
    <string name="invitation_loading_title">초대받은 튜립을 확인하는 중이에요</string>
    <string name="invitation_loading_title_with_name">%s 튜립을 확인하는 중이에요</string>
    <string name="invitation_loading_message">초대 정보를 확인하고 있어요</string>
    <string name="invitation_confirm_dialog_title">초대받은 튜립으로 이동할까요?</string>
    <string name="invitation_confirm_dialog_title_with_name">%s(으)로 이동할까요?</string>
    <string name="invitation_confirm_dialog_message">초대 링크가 확인됐어요.\n해당 튜립으로 이동할지 선택해주세요.</string>
    <string name="invitation_confirm_dialog_message_with_name">%s 초대 링크가 확인됐어요.\n해당 튜립으로 이동할지 선택해주세요.</string>
    <string name="invitation_confirm_dialog_confirm">이동하기</string>
    <string name="invitation_confirm_dialog_dismiss">닫기</string>
    <string name="invitation_invalid_dialog_title">초대 링크를 확인할 수 없어요</string>
    <string name="invitation_invalid_dialog_message_home">유효하지 않거나 만료된 초대 링크예요.\n홈으로 이동할게요.</string>
    <string name="invitation_invalid_dialog_message_login">유효하지 않거나 만료된 초대 링크예요.\n로그인 화면으로 이동할게요.</string>
    <string name="invitation_failure_dialog_title">초대 정보를 불러오지 못했어요</string>
    <string name="invitation_failure_dialog_message_home">네트워크 상태를 확인한 뒤 다시 시도해주세요.\n계속 실패하면 홈으로 이동해요.</string>
</resources>