<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_network_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:src="@drawable/ic_network_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <TextView
        android:id="@+id/tv_network_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cannot_connect_network"
        android:textAppearance="@style/title1"
        android:textColor="@color/gray_300_5b5b5b"
        app:layout_constraintTop_toBottomOf="@id/iv_network_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_network_error_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_connection_status"
        android:textAppearance="@style/title1"
        android:textColor="@color/gray_200_c1c1c1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_network_error" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retry"
        android:textColor="@color/pure_black_151515"
        android:background="@drawable/bg_gray200_radius_40dp"
        app:layout_constraintTop_toBottomOf="@id/tv_network_error_retry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="27dp"
        android:paddingVertical="4dp"
        android:paddingHorizontal="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>