<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pure_white_ffffff"
    tools:context=".ui.search.regionresult.RegionResultActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_search_result"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleCentered="false"
        app:title=""
        app:titleTextAppearance="@style/title1"
        app:titleTextColor="@color/pure_black_151515">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:background="@drawable/bg_gray100_radius_24dp">

            <EditText
                android:id="@+id/et_search_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:background="@null"
                android:paddingVertical="4dp"
                android:hint="@string/hint_text"
                android:imeOptions="actionSearch"
                android:textColor="@color/pure_black_151515"
                android:textColorHint="@color/gray_300_5b5b5b"
                android:textAppearance="@style/title3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/iv_search_result_clear"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:inputType="text" />

            <ImageView
                android:id="@+id/iv_search_result_clear"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/et_search_result"
                app:layout_constraintBottom_toBottomOf="@id/et_search_result"
                android:src="@drawable/ic_cancel"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:id="@+id/tv_search_result_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:textColor="@color/gray_300_5b5b5b"
        app:layout_constraintStart_toStartOf="@id/tb_search_result"
        app:layout_constraintTop_toBottomOf="@id/tb_search_result"
        tools:text="검색결과 15개" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_result"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="14dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_search_result_count"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="10"
        tools:listitem="@layout/item_result" />

    <ImageView
        android:id="@+id/iv_search_result_empty"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/region_result_no_result"
        android:src="@drawable/ic_sorry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_search_result_count"
        app:tint="@color/gray_300_5b5b5b" />

    <TextView
        android:id="@+id/tv_search_result_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/search_result_no_result"
        android:text="@string/region_result_no_result"
        android:textAppearance="@style/title1"
        android:textColor="@color/gray_400_2b2b2b"
        app:layout_constraintEnd_toEndOf="@id/iv_search_result_empty"
        app:layout_constraintStart_toStartOf="@id/iv_search_result_empty"
        app:layout_constraintTop_toBottomOf="@id/iv_search_result_empty" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_search_result_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="iv_search_result_empty,tv_search_result_empty" />

    <TextView
        android:id="@+id/tv_search_result_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/all_loading"
        android:visibility="gone"
        android:gravity="center"
        android:textColor="@color/pure_black_151515"
        android:textAppearance="@style/display"
        android:background="@color/pure_white_ffffff" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_result_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tb_search_result" />

    <ProgressBar
        android:id="@+id/pb_search_result"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>